refactor: enterprise-grade refactoring across all 6 phases + fix all tests (343 passing)
Phase 1: common-lib extraction
- Extracted BusinessException, GlobalExceptionHandler, PageResponse<T>, UserBriefVO,
  ApiResponse<T>, MyMetaObjectHandler, TimeZoneConfig into common-lib
- Auto-configured via META-INF spring AutoConfiguration.imports
- Added @Slf4j to all *ServiceImpl and *Controller classes
- docker-compose secrets use ${VAR:-default} env var pattern

Phase 2: Resilience4j + DB Pagination + Validation
- Added Resilience4j circuit breaker to all 5 services
- Feign fallback classes for all 13 Feign clients
- DB-level IPage<T> pagination in listUsersAdmin() and getPaginatedComments()
- @Valid on all @RequestBody controllers

Phase 3: Data ownership — judge-service no longer writes to registration DB
- Added 6 internal Feign endpoints to registration-service SubmissionRecordsController
- Removed SubmissionRecords PO, mapper, service from judge-service
- Updated DashboardServiceImpl, SubmissionJudgesServiceImpl, SubmissionWinnersServiceImpl
  to use SubmissionServiceClient Feign calls

Phase 4: Frontend auth refactoring
- src/api/apiClient.js — Axios instance with JWT interceptor + 401 auto-logout
- src/context/AuthContext.js — React Context with login()/logout()
- src/components/ProtectedRoute.js — role-based route guard
- App.js wrapped with AuthProvider; all role routes use ProtectedRoute

Phase 5: Observability & DevOps
- spring-boot-starter-actuator, micrometer tracing (Zipkin/Brave), Prometheus
- management block in all 7 service application.yml files
- Zipkin container in docker-compose.yml
- JVM container flags in all 7 Dockerfiles
- Docker healthchecks on all infra services; Spring Boot depends_on service_healthy
- .dockerignore at project root

Phase 6: API Standardization + God Service Split
- GlobalExceptionHandler returns ApiResponse<T> instead of Map<String,String>
- Extracted ISubmissionAnalyticsService + SubmissionAnalyticsServiceImpl from
  Submissio